# libdb

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CNAME  LEGAL  LICENSE  README  README.md  ROADMAP.md  examples_java  flake.nix  index.html  meson.build  style.css
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
btree/: bt_compact.c  bt_compare.c  bt_compress.c  bt_conv.c  bt_curadj.c  bt_cursor.c  bt_debug.c  bt_delete.c  bt_method.c  bt_open.c  bt_page.c  bt_put.c  bt_rec.c  bt_reclaim.c  bt_recno.c  bt_rsearch.c  bt_search.c  bt_split.c  bt_stat.c  bt_upgrade.c  bt_verify.c  btree.src  btree_auto.c  btree_autop.c
build_android/: Android.mk  db.h  db_config.h  db_int.h
build_brew/: bdb_brew.dsp  bdbread.mak  db.h  db_config.h  db_int.h
build_s60/: bdb_s60.mmp  db.h  db_config.h  db_int.h
build_unix/: HOWTO
build_vms/: Makefile  README  config.h  db.h  db_config.h  db_int.h
build_vxworks/: BerkeleyDB.wpj  BerkeleyDB.wsp  BerkeleyDB20.wpj  BerkeleyDB20small.wpj  BerkeleyDB22.wpj  BerkeleyDB22small.wpj  Makefile.6x  Makefile.6x.small  db.h  db_config.h  db_config_small.h  db_cxx.h  db_int.h
build_win16/: db.h  db.mk1  db_int.h  win16dbfiles.txt
build_win32/: .dbtestrc  Berkeley_DB.dsw  DB_VC4.mak  DB_VC4.mdp  app_dsp.src  build_all.dsp  db.h  db_archive.dsp  db_checkpoint.dsp  db_config.h  db_cxx.h  db_deadlock.dsp  db_dll.dsp  db_dump.dsp  db_hotbackup.dsp  db_int.h  db_java.dsp  db_java.dsp.postbuild  db_load.dsp  db_perf.dsp  db_printlog.dsp  db_recover.dsp  db_small.dsp  db_stat.dsp  db_static.dsp  db_tcl.dsp  db_test.dsp  db_test.dsp.postbuild  db_upgrade.dsp  db_verify.dsp  dbkill.cpp  dbtest.dsp  dynamic_dsp.src  ex_access.dsp  ex_btrec.dsp  ex_csvcode.dsp  ex_csvload.dsp  ex_csvquery.dsp  ex_env.dsp  ex_lock.dsp  (+30 more)
build_win64/: db.h
build_wince/: Berkeley_DB.sln  app_vcproj.src  db.h  db.vcproj  db_config.h  db_int.h  db_small.vcp  db_small.vcproj  db_small_static.vcproj  db_sql.vcproj  db_sql_static.vcproj  db_static.vcp  db_static.vcproj  dynamic_vcproj.src  static_vcproj.src  wce_sql.vcproj  wce_tpcb.vcp  wce_tpcb.vcproj
build_windows/: BDB_dotNet.sln  BDB_dotNet_examples.sln  BDB_dotNet_examples_vs2010.sln  BDB_dotNet_vs2010.sln  Berkeley_DB.sln  Berkeley_DB_examples.sln  Berkeley_DB_examples_vs2010.sln  Berkeley_DB_vs2010.sln  app_dsp.src  application.props  db.h  db.vcproj  db.vcxproj  db_archive.dsp  db_archive.vcproj  db_archive.vcxproj  db_checkpoint.dsp  db_checkpoint.vcproj  db_checkpoint.vcxproj  db_codegen.dsp  db_config.h  db_csharp.vcproj  db_csharp.vcxproj  db_cxx.h  db_deadlock.dsp  db_deadlock.vcproj  db_deadlock.vcxproj  db_dll.dsp  db_dump.dsp  db_dump.vcproj  db_dump.vcxproj  db_hotbackup.dsp  db_hotbackup.vcproj  db_hotbackup.vcxproj  db_int.h  db_java.dsp  db_java.vcproj  db_java.vcxproj  db_load.dsp  db_load.vcproj  (+208 more)
clib/: err.c  getcwd.c  getopt.c  isalpha.c  isdigit.c  isprint.c  isspace.c  memcmp.c  memmove.c  printf.c  raise.c  snprintf.c  strcasecmp.c  strerror.c  time.c  vsnprintf.c
common/: clock.c  crypto_stub.c  db_byteorder.c  db_compint.c  db_err.c  db_getlong.c  db_idspace.c  db_log2.c  db_shash.c  dbt.c  mkpath.c  openflags.c  os_method.c  util_arg.c  util_cache.c  util_log.c  util_sig.c  zerofill.c
crypto/: aes_method.c  crypto.c
csharp/: AckPolicy.cs  ActiveTransaction.cs  BTreeCursor.cs  BTreeDatabase.cs  BTreeDatabaseConfig.cs  BTreeStats.cs  BaseCursor.cs  BaseDatabase.cs  ByteOrder.cs  CacheInfo.cs  CachePriority.cs  CompactConfig.cs  CompactData.cs  Cursor.cs  CursorConfig.cs  Database.cs  DatabaseConfig.cs  DatabaseEntry.cs  DatabaseEnvironment.cs  DatabaseEnvironmentConfig.cs  DatabaseException.cs  DatabaseType.cs  DbThreadID.cs  DeadlockPolicy.cs  Delegates.cs  Enums.cs  ErrorCodes.cs  HashCursor.cs  HashDatabase.cs  HashDatabaseConfig.cs  HashStats.cs  JoinCursor.cs  KeyRange.cs  LSN.cs  Lock.cs  LockDetectMode.cs  LockMode.cs  LockOperation.cs  LockRequest.cs  LockStats.cs  (+46 more)
cxx/: cxx_app.cpp  cxx_db.cpp  cxx_dbc.cpp  cxx_dbt.cpp  cxx_env.cpp  cxx_except.cpp  cxx_lock.cpp  cxx_log.cpp  cxx_logc.cpp  cxx_mpool.cpp  cxx_multi.cpp  cxx_seq.cpp  cxx_table.cpp  cxx_txn.cpp  namemap.txt
db/: Design.fileop  crdel.src  crdel_auto.c  crdel_autop.c  crdel_rec.c  db.c  db.src  db_am.c  db_auto.c  db_autop.c  db_cam.c  db_cds.c  db_compact.c  db_conv.c  db_dispatch.c  db_dup.c  db_iface.c  db_join.c  db_meta.c  db_method.c  db_open.c  db_overflow.c  db_ovfl_vrfy.c  db_pr.c  db_rec.c  db_reclaim.c  db_remove.c  db_rename.c  db_ret.c  db_setid.c  db_setlsn.c  db_sort_multiple.c  db_stati.c  db_truncate.c  db_upg.c  db_upg_opd.c  db_upgrade.c  db_vrfy.c  db_vrfy_stub.c  db_vrfyutil.c  (+2 more)
db185/: db185.c  db185_int.h  db185_int.in
db_archive/: db_archive.c
db_checkpoint/: db_checkpoint.c
db_codegen/: code_capi.c  code_parse.c  db_codegen.c  db_codegen.h
db_deadlock/: db_deadlock.c
db_dump/: db_dump.c
db_dump185/: db_dump185.c
db_hotbackup/: db_hotbackup.c
db_load/: db_load.c
db_log_verify/: db_log_verify.c
db_printlog/: README  db_printlog.c  dbname.awk  fileid.awk  pgno.awk  rectype.awk  txn.awk
db_recover/: db_recover.c
db_sql_codegen/: buildpt.c  db_sql_codegen.c  db_sql_codegen.h  generate.c  generate_test.c  generate_verification.c  generation.h  generation_utils.c  hint_comment.c  parsefuncs.c  preparser.c  tokenize.c  utils.c
db_stat/: db_stat.c
db_upgrade/: db_upgrade.c
db_verify/: db_verify.c
dbinc/: atomic.h  btree.h  clock.h  crypto.h  cxx_int.h  db.in  db_185.in  db_am.h  db_cxx.in  db_dispatch.h  db_int.in  db_join.h  db_page.h  db_server_int.h  db_swap.h  db_upgrade.h  db_verify.h  debug.h  fop.h  globals.h  hash.h  hmac.h  lock.h  log.h  log_verify.h  mp.h  mutex.h  mutex_int.h  os.h  partition.h  perfmon.h  qam.h  queue.h  region.h  rep.h  repmgr.h  shqueue.h  tcl_db.h  txn.h  win_db.h  (+1 more)
dbinc_auto/: api_flags.in  btree_auto.h  btree_ext.h  common_ext.h  crdel_auto.h  db_auto.h  db_ext.h  dbreg_ext.h  env_ext.h  ext_def.in  fileops_ext.h  hash_ext.h  int_def.in  lock_ext.h  log_ext.h  mp_ext.h  mutex_ext.h  (+12 more)
(+14478 files in other folders)
